# quantbacktester

./: .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  pytest.ini
api/: __init__.py  config.py  database.py  main.py  models.py  requirements.txt  worker.py
api/tests/: test_api.py
cpp-engine/: CMakeLists.txt
cpp-engine/include/: Backtest.h  DataHandler.h  Event.h  Portfolio.h  Strategy.h
cpp-engine/src/: Backtest.cpp  DataHandler.cpp  Portfolio.cpp  Strategy.cpp  bindings.cpp  main_cli.cpp
cpp-engine/tests/: CMakeLists.txt  test_backtest_integration.cpp  test_datahandler.cpp  test_indicators.cpp  test_portfolio.cpp
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: FileUpload.tsx
frontend/src/hooks/: useBacktestWs.ts
frontend/src/pages/: BacktestRunner.tsx  Dashboard.tsx  ResultsPage.tsx  UploadData.tsx
frontend/src/utils/: types.ts
k8s/base/: api.yaml  infra.yaml  kustomization.yaml  namespace.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: dashboard.yaml  quant.json
monitoring/grafana/datasources/: prometheus.yaml
scripts/: build.sh  deploy.sh  download_data.py  gen_types.sh  init.sql
